--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar-toggler">
           <a class="navbar-brand" href="#">
-            <img src="https://cdn-icons-png.flaticon.com/512/8201/8201885.png" width="50" alt="Logo de la página web">
+            <img src="https://cdn-icons-png.flaticon.com/512/3099/3099198.png" width="50" alt="Logo de la página web">
           </a>
           <ul class="navbar-nav d-flex justify-content-center align-items-center">
             <li class="nav-item">
@@ -73,7 +73,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Alma Peña</h2>
-        <p class="seccion-texto">Soy una estudiante de Ingeniería Química apasionada por la Ingeniería Ambiental y la sostenibilidad. Mi fuerte ética ambiental y conciencia de los desafíos actuales me impulsan a promover prácticas sostenibles en mi facultad y a trabajar en proyectos que aborden la Agenda 2030. Creo en la importancia de la educación ambiental y estoy decidida a concienciar a la comunidad sobre la protección del medio ambiente. Mi objetivo es combinar mis habilidades académicas con mi pasión por el medio ambiente para contribuir a un entorno más sostenible y saludable. Busco continuamente oportunidades para adquirir conocimientos y habilidades de liderazgo, gestión y comunicación que sean valiosas para mi futuro y desarrollo personal.</p>
+        <p class="seccion-texto">Soy estudiante de Ingeniería Química apasionada por la Ingeniería Ambiental y la sostenibilidad. Mi fuerte ética ambiental y conciencia de los desafíos actuales me impulsan a promover prácticas sostenibles en mi facultad y a trabajar en proyectos que aborden la Agenda 2030. Creo en la importancia del avance de la biotecnología y estoy decidida a concienciar a la comunidad sobre la protección del medio ambiente. Mi objetivo es combinar mis habilidades académicas con mi pasión en programación y con la naturaleza para contribuir a un entorno más sostenible y saludable. Busco continuamente oportunidades para adquirir conocimientos y habilidades de liderazgo, gestión y comunicación que sean valiosas para mi futuro y desarrollo personal.</p>
       </div>
     </section>
 
@@ -83,7 +83,7 @@
         <div class="row">
           <!-- Desarrollo Web -->
           <div class="columna col-12 col-md-4">
-            <i class="bi bi-laptop"></i>
+            <i class="bi bi-globe2"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
             <p>Soy una entusiasta del desarrollo web con experiencia adquirida a través de mi participación en el programa Tecnolochicas Pro. Mi formación en esta plataforma me ha proporcionado habilidades sólidas para crear y diseñar sitios web interactivos. </p>
             <div class="badges-contenedor">
@@ -94,7 +94,7 @@
           </div>
           <!-- SEIMIQ UNAM -->
           <div class="columna col-12 col-md-4">
-            <i class="bi bi-laptop"></i>
+            <i class="bi bi-flower1"></i>
             <p class="experiencia-titulo">SEIMIQ UNAM</p>
             <p>Soy miembro activo de la Sociedad de Estudiantes de Ingeniería Química (SEIMIQ) en la UNAM, donde tengo el privilegio de servir como Coordinadora Ambiental. En este rol, lidero y colaboro en iniciativas diseñadas para promover la sostenibilidad y la conciencia ambiental dentro de nuestra comunidad. </p>
             <div class="badges-contenedor">
@@ -105,7 +105,7 @@
           </div>
           <!-- Estudiante -->
           <div class="columna col-12 col-md-4">
-            <i class="bi bi-pencil-fill"></i>
+            <i class="bi bi-mortarboard-fill"></i>
             <p class="experiencia-titulo">Estudiante</p>
             <p>Mi formación académica me ha proporcionado una base sólida en la ciencia y la ingeniería química, lo que me ha permitido comprender y abordar desafíos complejos en este campo. </p>
             <div class="badges-contenedor">
@@ -130,12 +130,12 @@
             <div class="proyecto">
               <img src="imagenes/Captura-Clon.PNG" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 1</p>
+                <p>Clon de Google</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/AlmaPeV/clon-google.git" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/AlmaPeV/clon-google" target="_blanck" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://google-clone-almapv.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -145,14 +145,14 @@
           <!-- Proyecto 2 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto2.png" alt="Proyecto 1">
+              <img src="imagenes/CapturaMiPrimerPagina.PNG" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 2</p>
+                <p>Mi Primer Página</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/AlmaPeV/MiPrimerPagina" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://alma-mi-primer-pagina.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -162,14 +162,14 @@
           <!-- Proyecto 3 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto3.png" alt="Proyecto 1">
+              <img src="imagenes/Portafolio.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 3</p>
+                <p>Mi portafolio</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/AlmaPeV/AlmaPeV.github.io" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://almapev.github.io" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -196,31 +196,31 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Gino">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="https://media.discordapp.net/attachments/1155980413693599814/1166214121226776646/Moni-foto.jpg?ex=6549ac89&is=65373789&hm=308235ff0f627472227765891f05242336732c1d9a5c70b373e00e5eccf6402b&=&width=774&height=774" alt="Foto de Monica">
+              <p class="testimonio-texto">El compromiso y responsabilidad son solo algunas de las habilidades que Alma posee. Sin duda alguna la toma de riesgos y responsabilidades ha caracterizado al colaborador diariamente, he sido apoyo y complice del crecimeinto profesional y personal permitiendome así acompañar y compartir expriencias para la mejora continua.</p>
               <div class="testimonio-info">
-                <p class="cliente">Gino</p>
-                <p class="cargo">Gerente de proyectos en DesarrolloWeb</p>
+                <p class="cliente">Monica Díaz</p>
+                <p class="cargo">Compañera en Bootcam Tecnolochicas Pro</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="https://media.discordapp.net/attachments/1155980413693599814/1165678057844129832/AnelMontes.jpg?ex=6547b94a&is=6535444a&hm=9faf7245c68d6c3ffa8c8ae4320fcf3675cec950f45ff09eb5957782c2cf42ae&=&width=774&height=774" alt="Foto de Anel">
+              <p class="testimonio-texto">Alma muestra un rápido progreso en la adquisición de habilidades técnicas clave y una gran disposición para colaborar en proyectos. Su actitud positiva y su voluntad de aprender constantemente son cualidades valiosas en el campo de la programación. No tengo dudas de que Alma seguirá creciendo y haciendo contribuciones significativas como desarrolladora frontend en el futuro.</p>
               <div class="testimonio-info">
-                <p class="cliente">Nora</p>
-                <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
+                <p class="cliente">Anel Montes</p>
+                <p class="cargo">Mentora de Desarrollo front-end en Tecnolochicas Pro</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Leonardo">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="https://media.discordapp.net/attachments/1155980413693599814/1166208049384534086/KaryBh_Cabral.jpg?ex=6549a6e2&is=653731e2&hm=95f8c0785681001ef31a2e991d3dceeeab03d131c0008909e90f74bc2f92be6c&=&width=580&height=774" alt="Foto de KaryBh">
+              <p class="testimonio-texto">Alma a adquirido y mostrado habilidades técnicas,  una gran disposición para colaborar en proyectos. y Sus cualidades valiosas en el campo de la programación y como excelente compañera . No tengo dudas de que Alma seguirá creciendo y haciendo contribuciones significativas como desarrolladora frontend en el futuro.</p>
               <div class="testimonio-info">
-                <p class="cliente">Leonardo</p>
-                <p class="cargo">Director de AprendeAProgramar</p>
+                <p class="cliente">KaryBh Cabral</p>
+                <p class="cargo">Compañera en Bootcam Tecnolochicas Pro</p>
               </div>
             </div>
           </div>
@@ -262,23 +262,23 @@
     
     <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
-      <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
+      <img class="footer-logo" src="https://cdn-icons-png.flaticon.com/512/3099/3099198.png" alt="Logo del portafolio">
       <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/AlmaPeV" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/almagpenavaldes-/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://instagram.com/alma_vls?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        <a href="mailto:almagvlz3@gmail.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Jane Doe (2022) &#169;</div>
+      <div class="derechos-de-autor">Creado por Alma Peña (2023) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
