--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Alma Peña</h2>
-        <p class="seccion-texto">Soy una estudiante de Ingeniería Química apasionada por la Bioquímica y la Biotecnología. Mi fuerte ética ambiental y conciencia de los desafíos actuales me impulsan a promover prácticas sostenibles en mi facultad y a trabajar en proyectos que aborden la Agenda 2030. Creo en la importancia del avance científico para mejorar la salud humana y estoy decidida a generar un impacto positivo en las vidas de la sociedad. 
-          Mi objetivo es combinar mis habilidades académicas con mi pasión en programación y la conexión con la naturaleza para contribuir a un entorno más sostenible y saludable. Busco de manera continua oportunidades para ampliar mis conocimientos y desarrollar habilidades de liderazgo, gestión y comunicación que sean valiosas para mi futuro profesional como para mi desarrollo personal.</p>
+        <p class="seccion-texto">Soy una estudiante de Ingeniería Química apasionada por la Bioquímica y la Biotecnología. Mi fuerte ética ambiental y conciencia de los desafíos actuales me impulsan a promover prácticas sostenibles en mi facultad y a trabajar en proyectos que aborden la Agenda 2030. Creo en la importancia del avance científico para mejorar la salud humana y estoy decidida a generar un impacto positivo en las vidas de la sociedad.
+          Mi objetivo es combinar mis habilidades académicas con mi pasión en programación y la conexión con la naturaleza para contribuir a un entorno más sostenible y saludable. 
+          Busco de manera continua oportunidades para ampliar mis conocimientos y desarrollar habilidades de liderazgo, gestión y comunicación que sean valiosas para mi futuro profesional como para mi desarrollo personal.</p>
       </div>
     </section>
 
